--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="Pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>WebSite</title>
+    <title>website</title>
 </head>
-
 <body>
     <header>
         <nav class="navegation">
@@ -31,19 +29,16 @@
     <main>
         <section class="home">
             <div class="home-text">
-                <h4 class="text-h4">Welcome Food PeeK</h4>
-                <h1 class="text-h1">Different spice for diffent tastes</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipidicing alit. Quod error veniam in voluptatem magni
-                    quisquam</p>
-                    <a href="#" class="home-btn">Order yours</a>
+                <h4 class="text-h4">Welcome FooD PeeK</h4>
+                <H1 class="text-h1">Different spice for different tastes</H1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod error veniam in voluptatem magni quisquam</p>
+                <a href="#" class="home-btn">Order yours</a>
             </div>
             <div class="home-img">
                 <img src="imagem.png" alt="hamburguer">
-
             </div>
         </section>
     </main>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
-
 </html>
