--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="home">
             <div class="home-text">
                 <h4 class="text-h4">Welcome FooD PeeK</h4>
-                <H1 class="text-h1">Different spice for different tastes</H1>
+                <H1 class="text-h1">Different spice for differen ddddjdjsakkst tastes</H1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod error veniam in voluptatem magni quisquam</p>
                 <a href="#" class="home-btn">Order yours</a>
             </div>
